--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,11 @@ dependencies:
   intl: ^0.20.2
   path_provider: ^2.1.5
   firebase_analytics: ^11.4.4
+  cloud_firestore: ^5.6.5
+  audioplayers: ^6.4.0
+  flutter_sms: ^2.3.3
+  torch_light: ^1.1.0
+  permission_handler: ^11.4.0
 
 dev_dependencies:
   flutter_test:
